--- a/styles.css
+++ b/styles.css
@@ -8,235 +8,302 @@
     scroll-behavior: smooth;
 }
 
-body {
-    margin: 10px;
-    background-color: #f8f8f8;
-}
+/* ------------------------------------------------HEROBANNER----------------------------------------------- */
+.herobanner {
+    background-image: url(imgs/homebanner.jpg);
+    width: 100vw;
+    height: 90vh;
+    padding: 1rem 0;
+    text-align: center;
 
-p {
-    line-height: 1.5;
-}
-
-a {
-    text-decoration: none;
-    color: #000000;
-}
-
-/* ------------------------------------------------MENU----------------------------------------------- */
-/* MENU FLEX CONTAINER */
-.menu {
-    height: 80px;
     display: flex;
-    flex-flow: row nowrap;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
-    margin-bottom: 10px;
-    background-color: #ffffff;
 }
 
-/* LOGO */
-.menu-logo {
-    margin: 10px;
-    background: linear-gradient(7deg, 
-    rgb(255, 0, 0) 0%, 
-    rgb(255, 0, 0) 32%, 
-    rgb(0, 0, 255) 38%, 
-    rgb(255, 255, 0) 70%, 
-    rgb(255, 255, 0) 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.logoec {
-    font-size: 40px;
-    font-weight: 900;
-
-
-}
-
-.logo {
-    width: 50px;
-}
-
-/* MENU FLEX ITEMS */
-.menu-items {
-    display: flex;
-    gap: 50px;
-    margin: 10px;
-}
-
-.menu-item {
-    font-size: 20px;
-}
-
-/* ------------------------------------------------PAGE 1----------------------------------------------- */
-/* MAIN BLOCK CONTAINER */
-.content1 {
-    display: block;
-    padding: 10px;
-    text-align: center;
-}
-
-/* BLOCK ONE */
-.content-item1 {
-    display: block;
-    margin-bottom: 10px;
-    padding: 50px;
-    border: 1px solid;
-    border-radius: 10px;
-}
-
-/* BLOCK TWO */
-.content-item2 {
-    display: block;
-    margin-bottom: 10px;
-    padding: 40px;
-    border: 1px solid;
-    border-radius: 10px;
-}
-
-.content-subtitle {
-    margin-bottom: 40px;
-}
-
-/* ------------------------------------------------PAGE 2----------------------------------------------- */
-/* MAIN BLOCK CONTAINER */
-.content2 {
-    display: block;
-    margin: 20px auto;
+.herobanner > h1 {
     width: 50%;
-    border: 10px solid gray;
-    padding: 50px;
-    text-align: justify;
-    border-radius: 10px;
+    font-size: 6rem;
+    color: rgba(46, 46, 46, 0.8);
+    text-transform: uppercase;
 }
 
-/* ------------------------------------------------PAGE 3----------------------------------------------- */
-/* MAIN FLEX CONTAINER */
+.herobanner > h1 > span {
+    font-size: 5.5rem;
+}
+
+.herobanner > p {
+    color: white;
+}
+
+.herobanner > a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+
+.buttondown {
+    width: 100vw;
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+/* ------------------------------------------------CONTENT1----------------------------------------------- */
+.content1 {
+    width: 90vw;
+    height: 90vh;
+    margin: 0 auto;
+    background-color: whitesmoke;
+    
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 3rem;
+}
+
+.content1-img {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 1rem;
+}
+
+.buttondown {
+    position: relative;
+    left: 50vw;
+}
+
+/* ------------------------------------------------CONTENT2----------------------------------------------- */
+.content2 {
+    width: 90vw;
+    height: 90vh;
+    margin: 0 auto;
+    background-color: #000021;
+    color: white;
+}
+
+.values {
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 3rem 0;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 3.5rem;
+}
+
+.values > h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+    grid-column: 1 / -1;
+}
+
+.ourvalues > h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 800;
+    padding-bottom: 1.5rem;
+    padding-top: 1.5rem;
+}
+
+.ourvalues > p {
+    line-height: 1.8;
+}
+
+.separator {
+    margin: 0 auto;
+    width: 30%;
+}
+/* ------------------------------------------------CONTENT3----------------------------------------------- */
 .content3 {
+    width: 80vw;
+    height: 90vh;
+    margin: 0 auto;
+    padding: 2rem;
+    background-color: #000021;
+    color: white;
+    text-align: center;
+
     display: flex;
-    gap: 10px;
-    padding: 10px;
-}
-
-/* LEFT COLUMN CONTENT */
-.left-container {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
-    justify-content: space-around;
-    gap: 10px;
-    width: 20%;
-    max-height: 400px;
-    padding: 20px;
-    position: sticky;
-    top: 0;
-    border-radius: 10px;
-    border: 1px solid;
-}
-
-.content3-left > a {
-    text-decoration: underline;
-}
-
-.content3-left > a > h1 {
-    font-weight: 500;
-}
-
-/* RIGHT ROW CONTENT */
-.centered {
-    width: 80%;
-    background-color: #fafefe;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    gap: 10px;
-    padding: 20px 0px;
-    border: 1px solid;
-    border-radius: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
 }
 
-.right-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-content: center;
-    gap: 20px;
-    max-width: 980px;
+.content3 > img {
+    width: 100%;
 }
 
-.img-right {
-    width: 230px;
-    height: 230px;
-    border-radius: 10px;
-    object-fit: cover;
-    object-position: -150px 0px;
-}
-
-/* ------------------------------------------------PAGE 4----------------------------------------------- */
-/* MAIN BLOCK CONTAINER */
+/* ------------------------------------------------CONTENT4----------------------------------------------- */
 .content4 {
-    display: block;
-    background-color: #f8f8f8;
-    padding: 10px;
+    width: 80vw;
+    height: 90vh;
+    margin: 0 auto;
+    padding: 2rem;
+    background-color: #000021;
+    color: white;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 1rem;
 }
 
-/* BLOCK CONTENT */
-.content4-block {
-    display: block;
-    padding: 20px;
-    text-align: justify;
-    border: 1px solid;
-    border-radius: 10px;
+.content4 > img {
+    width: 100%;
 }
-
-/* FLOAT */
-.content4-img {
-    float: left;
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
-    margin-right: 20px;
-}
-
-.content4-text {
-    margin: 15px 0px;
-}
-
-/* ------------------------------------------------PAGE 5----------------------------------------------- */
-/* MAIN BLOCK CONTAINER */
+/* ------------------------------------------------CONTENT5----------------------------------------------- */
 .content5 {
-    display: block;
-    background-color: #f8f8f8;
-    padding: 10px;
-}
-
-/* BLOCK CONTENT */
-.content5-block {
-    display: block;
-    padding: 20px;
+    width: 80vw;
+    height: 90vh;
+    margin: 0 auto;
+    padding: 2rem;
+    background-color: #000021;
+    color: white;
     text-align: justify;
-    border: 1px solid;
-    border-radius: 10px;
+    position: relative;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    gap: 1rem;
 }
 
-/* FLOAT */
-.content5-img {
-    float: right;
-    width: 250px;
-    height: 250px;
-    margin-left: 20px;
-    object-fit: cover;
+.slider5-container {
+    width: 50vw;
+    height: 50vh;
+    background-image: url(imgs/andes1.jpg);
+    background-size: cover;
+    border-radius: 0.5rem;
+    animation: slider 10s infinite alternate;
 }
 
-.content5-subtitle {
-    padding-top: 10px;
+@keyframes slider {
+    20% {
+        background-image: url(imgs/andes2.jpg);
+        background-size: cover;
+    }
+    40% {
+        background-image: url(imgs/andes3.jpg);
+        background-size: cover;
+    }
+    60% {
+        background-image: url(imgs/andes4.jpg);
+        background-size: cover;
+    }
+    80% {
+        background-image: url(imgs/andes5.jpg);
+        background-size: cover;
+    }
+    100% {
+        background-image: url(imgs/andes6.jpg);
+        background-size: cover;
+    }
+}
+/* ------------------------------------------------CONTENT6----------------------------------------------- */
+.content6 {
+    width: 100vw;
+    height: 90vh;
+    margin: 0 auto;
+    padding: 0 2rem;
 }
 
-.where {
-    padding-top: 5px;
+.content6-text {
+    width: 800px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 0.9rem;
+}
+
+.content6-grid {
+    width: 90vw;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 0.85rem;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.content6-grid > div > img {
+    width: 100px;
+}
+
+.grid6-span {
+    width: 350px;
+    grid-column: span 2;
+    grid-row: span 2;
+}
+
+.grid6-mid {
+    width: 50%;
+    grid-column: 2 / 4;
+}
+/* ------------------------------------------------CONTENT7----------------------------------------------- */
+.content7 {
+    width: 100vw;
+    height: 80vh;
+    margin: 0 auto;
+    padding: 0 2rem;
+}
+
+.content7 > h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
+.externals {
+    max-width: 90vw;
+    margin: 0 auto;
+
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.gallery {
+    position: relative;
+    overflow: hidden;
+    border-radius: 0.5rem;
+}
+
+.gallery-img {
+    width: 100%;
+    border-radius: 0.5rem;
+    filter: brightness(80%);
+    transition: filter 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.gallery-img:hover {
+    filter: brightness(60%);
+    transform: scale(1.03);
+
+}
+
+.link-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%, -50%); 
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 800;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
 }
 
 /* ------------------------------------------------FOOTER----------------------------------------------- */
