--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,85 @@
     scroll-behavior: smooth;
 }
 
+/* ------------------------------------------------MENU----------------------------------------------- */
+/* MENU FLEX CONTAINER */
+.menu {
+    height: 80px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 10px;
+    background-color: #ffffff;
+}
+
+.menu-link {
+    color: #000021;
+    text-decoration: none;
+}
+
+/* LOGO */
+.menu-logo {
+    margin: 10px;
+    background: linear-gradient(7deg, 
+    rgb(255, 0, 0) 0%, 
+    rgb(255, 0, 0) 32%, 
+    rgb(0, 0, 255) 38%, 
+    rgb(255, 255, 0) 70%, 
+    rgb(255, 255, 0) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.logoec {
+    font-size: 40px;
+    font-weight: 900;
+
+
+}
+
+.logo {
+    width: 50px;
+}
+
+/* MENU FLEX ITEMS */
+.menu-items {
+    display: flex;
+    gap: 50px;
+    margin: 10px;
+}
+
+.menu-item {
+    font-size: 20px;
+}
+
+@media (max-width: 810px) {
+    .menu-logo {
+        display: none;
+    }
+    .menu {
+        height: 80px;
+        display: flex;
+        flex-flow: row nowrap;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 10px;
+        background-color: #ffffff;
+    }
+    .menu-items {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 426px) {
+    .menu {
+        display: none;
+    }
+}
+
 /* ------------------------------------------------HEROBANNER----------------------------------------------- */
 .herobanner {
     background-image: url(imgs/homebanner.jpg);
@@ -34,7 +113,13 @@
 }
 
 .herobanner > p {
-    color: white;
+    width: 50%;
+    background-color: rgba(232, 232, 232, 0.8);
+    text-align: justify;
+    color: rgb(0, 0, 33);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    line-height: 1.5;
 }
 
 .herobanner > a {
@@ -48,16 +133,54 @@
     text-decoration: none;
     font-size: 1.5rem;
 }
+
+@media (max-width: 769px) {
+    .herobanner > h1 {
+        margin: 0 auto;
+        font-size: 4rem;
+        color: rgba(46, 46, 46, 0.8);
+        text-transform: uppercase;
+    }
+    
+    .herobanner > h1 > span {
+        font-size: 3.5rem;
+    }
+    .herobanner {
+        background-image: url(imgs/homebanner.jpg);
+        width: 100vw;
+        height: 50vh;
+        padding: 1rem 0;
+        text-align: center;
+    }
+}
+
+@media (max-width: 426px) {
+    .herobanner > h1 {
+        font-size: 3rem;
+        color: rgba(46, 46, 46, 0.8);
+        text-transform: uppercase;
+        justify-self: flex-end;
+    }
+    
+    .herobanner > h1 > span {
+        font-size: 2.5rem;
+    }
+}
+
 /* ------------------------------------------------CONTENT1----------------------------------------------- */
-.content1 {
-    width: 90vw;
+.homecontent1 {
+    width: 95vw;
     height: 90vh;
     margin: 0 auto;
     background-color: whitesmoke;
+    font-size: 1.3rem;
+    text-align: justify;
+    padding: 0 1rem;
     
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+    justify-content: center;
     gap: 3rem;
 }
 
@@ -68,13 +191,46 @@
     gap: 1rem;
 }
 
+.content1-img > img {
+    width: 100%;
+    height: 30vh;
+    object-fit: cover;
+}
+
 .buttondown {
     position: relative;
     left: 50vw;
 }
 
+@media (max-width: 769px) {
+    .homecontent1 {
+        width: 95vw;
+        height: auto;
+        margin: 0 auto;
+        background-color: whitesmoke;
+        font-size: 1.3rem;
+        text-align: justify;
+        padding: 0 1rem;
+        
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem;
+    }
+    .content1-img {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        gap: 1rem;
+    }
+}
+
+@media (max-width: 426px) {
+    
+}
 /* ------------------------------------------------CONTENT2----------------------------------------------- */
-.content2 {
+.homecontent2 {
     width: 90vw;
     height: 90vh;
     margin: 0 auto;
@@ -82,7 +238,7 @@
     color: white;
 }
 
-.values {
+.regions {
     width: 90%;
     margin: 0 auto;
     text-align: center;
@@ -90,61 +246,146 @@
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 3.5rem;
+    gap: 2.5rem;
 }
 
-.values > h1 {
-    font-size: 3rem;
-    text-transform: uppercase;
-    letter-spacing: 0.5rem;
+.content2-text {
     grid-column: 1 / -1;
 }
 
-.ourvalues > h2 {
+.content2-text > h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    letter-spacing: 0.5rem;
+}
+
+.content2-text > p {
+    width: 70%;
+    margin: 0 auto;
+    padding-top: 0.5rem;
+    font-size: 1.3rem;
+}
+
+.ourregions > h2 {
     text-align: center;
     text-transform: uppercase;
     font-weight: 800;
-    padding-bottom: 1.5rem;
-    padding-top: 1.5rem;
+    font-size: 1.2rem;
+    padding-bottom: 1rem;
+    padding-top: 1rem;
 }
 
-.ourvalues > p {
-    line-height: 1.8;
+.ourregions > p {
+    line-height: 1.1;
+    text-align: justify;
 }
 
-.separator {
-    margin: 0 auto;
-    width: 30%;
+.ourregions > img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    padding-top: 1rem;
+}
+
+@media (max-width: 810px) {
+    .homecontent2 {
+        width: 90vw;
+        height: auto;
+        margin: 0 auto;
+        background-color: #000021;
+        color: white;
+    }
+    .regions {
+        width: 90%;
+        margin: 0 auto;
+        text-align: center;
+        padding: 3rem 0;
+    
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2.5rem;
+    }
+    .ourregions > p {
+        line-height: 1;
+        text-align: justify;
+    }
+}
+
+@media (max-width: 426px) {
+    .regions {
+        width: 90%;
+        margin: 0 auto;
+        text-align: center;
+        padding: 3rem 0;
+    
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2.5rem;
+    }
+    .ourregions > img {
+        width: 70%;
+        object-fit: cover;
+        padding-top: 1rem;
+    }
+    .content2-text > h1 {
+        font-size: 2rem;
+        text-transform: uppercase;
+        letter-spacing: 0.5rem;
+    }
+    
+    .content2-text > p {
+        width: 70%;
+        margin: 0 auto;
+        padding-top: 0.5rem;
+        font-size: 1rem;
+    }
 }
 /* ------------------------------------------------CONTENT3----------------------------------------------- */
-.content3 {
+.homecontent3 {
     width: 80vw;
     height: 90vh;
     margin: 0 auto;
     padding: 2rem;
-    background-color: #000021;
-    color: white;
+    background-color: whitesmoke;
     text-align: center;
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     gap: 1rem;
 }
 
-.content3 > img {
+.homecontent3 > img {
     width: 100%;
 }
 
+@media (max-width: 811px) {
+    .homecontent3 {
+        width: 80vw;
+        height: auto;
+        margin: 0 auto;
+        padding: 2rem;
+        background-color: whitesmoke;
+        text-align: center;
+    
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+}
+
+@media (max-width: 426px) {
+    
+}
 /* ------------------------------------------------CONTENT4----------------------------------------------- */
-.content4 {
+.homecontent4 {
     width: 80vw;
     height: 90vh;
     margin: 0 auto;
     padding: 2rem;
-    background-color: #000021;
-    color: white;
+    background-color: whitesmoke;
     text-align: center;
 
     display: flex;
@@ -154,11 +395,26 @@
     gap: 1rem;
 }
 
-.content4 > img {
+.homecontent4 > img {
     width: 100%;
 }
+
+@media (max-width: 810px) {
+        .homecontent4 {
+            width: 80vw;
+            height: auto;
+            margin: 0 auto;
+            padding: 2rem;
+            background-color: whitesmoke;
+            text-align: justify;
+        }
+    }
+
+@media (max-width: 426px) {
+    
+}
 /* ------------------------------------------------CONTENT5----------------------------------------------- */
-.content5 {
+.homecontent5 {
     width: 80vw;
     height: 90vh;
     margin: 0 auto;
@@ -173,6 +429,15 @@
     justify-items: center;
     align-items: center;
     gap: 1rem;
+}
+
+.content5-text {
+    align-self: flex-start;
+}
+
+.content5-text > p {
+    padding: 1rem;
+    line-height: 1.5;
 }
 
 .slider5-container {
@@ -206,19 +471,52 @@
         background-size: cover;
     }
 }
+
+@media (max-width: 769px) {
+    .homecontent5 {
+        width: 90vw;
+        height: auto;
+        margin: 0 auto;
+        padding: 0.1rem;
+        background-color: #000021;
+        color: white;
+        text-align: justify;
+        position: relative;
+    
+        display: grid;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        align-items: center;
+        gap: 1rem;
+    }
+    .slider5-container {
+        width: 80vw;
+        height: 300px;
+        background-image: url(imgs/andes1.jpg);
+        background-size: cover;
+        border-radius: 0.5rem;
+        animation: slider 10s infinite alternate;
+    }
+}
+
+@media (max-width: 426px) {
+    
+}
 /* ------------------------------------------------CONTENT6----------------------------------------------- */
-.content6 {
+.homecontent6 {
     width: 100vw;
     height: 90vh;
     margin: 0 auto;
     padding: 0 2rem;
 }
 
-.content6-text {
+.content6-text >h1 {
     width: 800px;
     margin: 0 auto;
     text-align: center;
-    font-size: 0.9rem;
+    font-size: 1.6rem;
+    font-weight: 900;
+    text-transform: uppercase;
 }
 
 .content6-grid {
@@ -232,11 +530,11 @@
     grid-template-rows: 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
-    gap: 1rem;
 }
 
 .content6-grid > div > img {
-    width: 100px;
+    width: 40px;
+    padding-bottom: 0.5rem;
 }
 
 .grid6-span {
@@ -246,18 +544,81 @@
 }
 
 .grid6-mid {
-    width: 50%;
+    width: 70%;
     grid-column: 2 / 4;
 }
+
+@media (max-width: 769px) {
+    .homecontent6 {
+        width: 100vw;
+        height: auto;
+        margin: 0 auto;
+        padding: 0 2rem;
+    }
+    .content6-grid > div > img {
+        width: 30px;
+        padding-bottom: 0.5rem;
+    }
+}
+
+@media (max-width: 426px) {
+    .content6-grid {
+        width: 90vw;
+        margin: 0 auto;
+        text-align: center;
+        font-size: 0.85rem;
+    
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        justify-items: center;
+        align-items: center;
+    }
+    
+    .content6-text >h1 {
+        width: 160px;
+        margin: 0 auto;
+        text-align: center;
+        font-size: 1.3rem;
+        font-weight: 900;
+        text-transform: uppercase;
+    }
+    .grid6-span {
+        width: 280px;
+        grid-column: 1 / 1;
+        grid-row: 1 / 1;
+    }
+    
+    .grid6-mid {
+        width: 70%;
+        grid-column: 1 / 1;
+    }
+
+    .grid6-exp {
+        grid-column: 1 / 1;
+    }
+    
+    .grid6-taste {
+        grid-column: 1 / 1;
+    }
+    
+    .grid6-bio {
+        grid-column: 1 / 1;
+    }
+    
+    .grid6-fiesta {
+        grid-column: 1 / 1;
+    }
+}
 /* ------------------------------------------------CONTENT7----------------------------------------------- */
-.content7 {
+.homecontent7 {
     width: 100vw;
     height: 80vh;
     margin: 0 auto;
     padding: 0 2rem;
 }
 
-.content7 > h1 {
+.homecontent7 > h1 {
     font-size: 3rem;
     text-transform: uppercase;
     letter-spacing: 0.5rem;
@@ -282,6 +643,8 @@
 
 .gallery-img {
     width: 100%;
+    height: 50vh;
+    object-fit: cover;
     border-radius: 0.5rem;
     filter: brightness(80%);
     transition: filter 0.5s ease-in-out, transform 0.5s ease-in-out;
@@ -305,6 +668,187 @@
     text-transform: uppercase;
     letter-spacing: 0.5rem;
 }
+
+@media (max-width: 769px) {
+    .homecontent7 {
+        width: 90vw;
+        height: auto;
+        padding: 0 2rem;
+    }
+    .externals {
+        max-width: 90vw;
+        margin: 0 auto;
+    
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .gallery-img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 0.5rem;
+        filter: brightness(80%);
+        transition: filter 0.5s ease-in-out, transform 0.5s ease-in-out;
+    }
+}
+
+@media (max-width: 426px) {
+    .homecontent7 > h1 {
+        font-size: 2rem;
+        text-transform: uppercase;
+        letter-spacing: 0rem;
+        text-align: right;
+        padding-bottom: 2rem;
+    }
+    .externals {
+        max-width: 90vw;
+        margin: 0 auto;
+    
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: 1fr;
+    }
+}
+/* ------------------------------------------------PAGE 2----------------------------------------------- */
+/* MAIN BLOCK CONTAINER */
+.content2 {
+    display: block;
+    margin: 20px auto;
+    width: 50%;
+    border: 10px solid gray;
+    padding: 50px;
+    text-align: justify;
+    border-radius: 10px;
+}
+
+/* ------------------------------------------------PAGE 3----------------------------------------------- */
+/* MAIN FLEX CONTAINER */
+.content3 {
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+}
+
+/* LEFT COLUMN CONTENT */
+.left-container {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: space-around;
+    gap: 10px;
+    width: 20%;
+    max-height: 400px;
+    padding: 20px;
+    position: sticky;
+    top: 0;
+    border-radius: 10px;
+    border: 1px solid;
+}
+
+.content3-left > a {
+    text-decoration: underline;
+}
+
+.content3-left > a > h1 {
+    font-weight: 500;
+}
+
+/* RIGHT ROW CONTENT */
+.centered {
+    width: 80%;
+    background-color: #fafefe;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px 0px;
+    border: 1px solid;
+    border-radius: 10px;
+}
+
+.right-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-content: center;
+    gap: 20px;
+    max-width: 980px;
+}
+
+.img-right {
+    width: 230px;
+    height: 230px;
+    border-radius: 10px;
+    object-fit: cover;
+    object-position: -150px 0px;
+}
+
+/* ------------------------------------------------PAGE 4----------------------------------------------- */
+/* MAIN BLOCK CONTAINER */
+.content4 {
+    display: block;
+    background-color: #f8f8f8;
+    padding: 10px;
+}
+
+/* BLOCK CONTENT */
+.content4-block {
+    display: block;
+    padding: 20px;
+    text-align: justify;
+    border: 1px solid;
+    border-radius: 10px;
+}
+
+/* FLOAT */
+.content4-img {
+    float: left;
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    margin-right: 20px;
+}
+
+.content4-text {
+    margin: 15px 0px;
+}
+
+/* ------------------------------------------------PAGE 5----------------------------------------------- */
+/* MAIN BLOCK CONTAINER */
+.content5 {
+    display: block;
+    background-color: #f8f8f8;
+    padding: 10px;
+}
+
+/* BLOCK CONTENT */
+.content5-block {
+    display: block;
+    padding: 20px;
+    text-align: justify;
+    border: 1px solid;
+    border-radius: 10px;
+}
+
+/* FLOAT */
+.content5-img {
+    float: right;
+    width: 250px;
+    height: 250px;
+    margin-left: 20px;
+    object-fit: cover;
+}
+
+.content5-subtitle {
+    padding-top: 10px;
+}
+
+.where {
+    padding-top: 5px;
+}
+
 
 /* ------------------------------------------------FOOTER----------------------------------------------- */
 /* FOOTER */
